<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6edf3"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" 
            android:background="#FFFFFF">
            
            <ScrollView 
                    android:id="@+id/scrollView1"
       	 			android:layout_width="match_parent"
        			android:layout_height="match_parent"
        			android:fillViewport="true" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

<!--  -->

				<LinearLayout 
				    
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content" 
				    	android:orientation="vertical"
				    	android:layout_weight="5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="완성된 나만의 사회적 장소와 활동들!"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" 
                        android:orientation="vertical"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/thirty_three_txt1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:textSize="9pt"
                            android:text="@string/twenty_eight_txt1" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/twenty_eight_txt2" 
                            android:layout_marginTop="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" 
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/thirty_three_txt2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/twenty_eight_txt3" 
                            android:textSize="9pt"
                            android:layout_marginLeft="20dp"/>

                        <TextView
                            android:id="@+id/thirty_col1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="" 
                            android:layout_marginLeft="20dp" 
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:id="@+id/thirty_col2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="" 
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" 
                        android:orientation="vertical"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/thirty_three_txt3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thirty_txt1" 
                            android:textSize="9pt"
                            android:layout_marginLeft="20dp"/>

                        <TextView
                            android:id="@+id/thirty_col3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="" 
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:id="@+id/thirty_col4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="" 
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"/>

                         <TextView
                            android:id="@+id/thirty_col5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="" 
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp" >

                        <TextView
                            android:id="@+id/thirty_three_txt4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thirty_txt3"
                            android:textSize="9pt" 
                            android:layout_marginLeft="20dp" />

                        <TextView
                            android:id="@+id/thirty_col6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="" 
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:id="@+id/thirty_col7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="" 
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"/>

                    </LinearLayout>
                    
<!--  -->
				</LinearLayout>

				<LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="vertical"
				    android:layout_weight="0.1" 
				    android:gravity="center_horizontal">

					<Button
					android:id="@+id/thirty_three_nextBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#3498DB"
                    android:height="30dp"
                    android:text="확인"
                    android:textColor="#FFFFFF"
                    android:textSize="6pt"
                    android:textStyle="bold"
                    android:width="80dp" />

				</LinearLayout>

                </LinearLayout>
      
            </ScrollView>
            
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:src="@drawable/visable_home" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:src="@drawable/visable_signal" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:src="@drawable/visable_graph" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:src="@drawable/visable_pos" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:src="@drawable/visable_heart" />
    </LinearLayout>

</LinearLayout>